@@ -1,6 +1,7 @@
 upcoming..
 
 * Mocking now works on classes that has atleast one non-private constructor that doesn't throw an exception
+* Added support for @Mock and @Spy annotations
 
 ----------------------
 - Version 0.2.0
